--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules
+
+# Next.js build output
+.next/
+.next/cache/
+.next/cache/webpack/
+.next/**/*.pack
+
+# Local development
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
