chore(manifest): update description to reflect branding changes for clarity and impact

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Standard Pensions Trust",
   "short_name": "SPT",
-  "description": "Ghana's Premier Pension Administrator - Comprehensive retirement planning solutions",
+  "description": "Ghana's Leading Pension Administrator - Comprehensive retirement planning solutions",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
